clusters/cl01tl/manifests/yubal/Namespace-yubal.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yubal
  labels:
    app.kubernetes.io/name: yubal
    app.kubernetes.io/instance: yubal
    app.kubernetes.io/part-of: yubal
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
