clusters/cl01tl/manifests/yubal/Deployment-yubal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yubal
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: yubal
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: yubal
    helm.sh/chart: yubal-5.2.1
  namespace: yubal
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: yubal
      app.kubernetes.io/instance: yubal
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: yubal
        app.kubernetes.io/name: yubal
    spec:
      enableServiceLinks: false
      serviceAccountName: yubal
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: YUBAL_TZ
              value: America/Chicago
            - name: YUBAL_HOST
              value: 0.0.0.0
            - name: YUBAL_PORT
              value: "8000"
            - name: YUBAL_LOG_LEVEL
              value: INFO
          image: ghcr.io/guillevc/yubal:0.10.0@sha256:1447663d19eb69e4c6c6d274e979a99c4013a7d0a7666ca1bf2127612cd639eb
          name: main
          resources:
            requests:
              cpu: 10m
              memory: 200Mi
          volumeMounts:
            - mountPath: /app/config
              name: config
            - mountPath: /app/data
              name: music
        - env:
            - name: OAUTH2_PROXY_HTTP_ADDRESS
              value: 0.0.0.0:4180
            - name: OAUTH2_PROXY_METRICS_ADDRESS
              value: 0.0.0.0:44180
            - name: OAUTH2_PROXY_UPSTREAMS
              value: http://localhost:8000
            - name: OAUTH2_PROXY_PROVIDER
              value: oidc
            - name: OAUTH2_PROXY_CODE_CHALLENGE_METHOD
              value: S256
            - name: OAUTH2_PROXY_SKIP_PROVIDER_BUTTON
              value: "true"
            - name: OAUTH2_PROXY_EMAIL_DOMAINS
              value: '*'
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.5@sha256:8498b0d0ef0a7b29686414000a08aee467f02d0299c9ed1e006a8f33fc017916
          livenessProbe:
            httpGet:
              path: /ping
              port: 4180
          name: oauth
          readinessProbe:
            httpGet:
              path: /ready
              port: 4180
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: yubal
        - name: music
          persistentVolumeClaim:
            claimName: yubal-nfs-storage
