clusters/cl01tl/manifests/yubal/Service-yubal.yaml
apiVersion: v1
kind: Service
metadata:
  name: yubal
  labels:
    app.kubernetes.io/instance: yubal
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: yubal
    app.kubernetes.io/service: yubal
    helm.sh/chart: yubal-5.2.1
  namespace: yubal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
    - port: 4180
      targetPort: 4180
      protocol: TCP
      name: oauth
    - port: 44180
      targetPort: 44180
      protocol: TCP
      name: oauth-metrics
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: yubal
    app.kubernetes.io/name: yubal
