clusters/cl01tl/manifests/yubal/HTTPRoute-yubal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yubal
  labels:
    app.kubernetes.io/instance: yubal
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: yubal
    helm.sh/chart: yubal-5.1.0
  namespace: yubal
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "yubal.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: yubal
          namespace: yubal
          port: 4180
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
